# wisp

./: .gitignore  Cargo.toml  LICENSE  README.md
bench/: .gitignore  README.md  results.md
bench/pyodide-compat/: FINDINGS.md  corpus.json  debug_groupby.mjs  package.json  run.mjs  setup.sh
bench/python-wasi-branching/: Cargo.toml  FINDINGS.md
bench/python-wasi-branching/src/: main.rs
bench/python-wasi-coldstart/: Cargo.toml  FINDINGS.md
bench/python-wasi-coldstart/src/: main.rs
bench/python-wasi-cow/: Cargo.toml  FINDINGS.md
bench/python-wasi-cow-branching/: Cargo.toml  FINDINGS.md
bench/python-wasi-cow-branching/src/: main.rs
bench/python-wasi-cow/src/: main.rs
bench/python-wasi-snapshot/: Cargo.toml  FINDINGS.md
bench/python-wasi-snapshot/src/: main.rs
bench/results-suite/: run.sh
bench/wasm-coldstart/: Cargo.toml  FINDINGS.md  NOTES.md
bench/wasm-coldstart/src/: main.rs
charts/wisp/: Chart.yaml  values.yaml
charts/wisp/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
crates/wisp-runtime/: Cargo.toml
crates/wisp-runtime/src/: capabilities.rs  main.rs  session.rs
docs/: architecture.md  deployment.md  security.md
examples/claude-code-integration/: README.md  wisp_mcp_server.py
examples/host-bridge/: Cargo.toml
examples/host-bridge/src/: main.rs
examples/opencode-integration/: README.md  package-lock.json  package.json  tsconfig.json  wisp-capabilities.example.json
examples/opencode-integration/.opencode/tools/: python_sandbox.ts
runtime/: .gitignore  README.md  ROADMAP.md
runtime/cpython-wasi/: FINDINGS.md  MIGRATION.md  build-openssl.sh  build-sqlite.sh  build.sh
runtime/cpython-wasi/wisp_entry/: build.sh  wisp_entry.c
runtime/cpython-wasi/wisp_python_lib/: wisp.py
scripts/: README.md  build-xxhash.sh
scripts/numpy/: 01-prepare.sh  01b-cython.sh  02-config.sh  03-compile-one.sh  04-compile-all.sh  05-archive.sh  07-stage-python.sh  README.md
scripts/pandas/: 01-cython.sh  02-compile-all.sh  README.md
sdks/python/: README.md  pyproject.toml
sdks/python/wisp/: __init__.py
