[workspace]
resolver = "2"
members = ["crates/*"]

# bench/* and examples/* are intentionally excluded — each has its own
# Cargo.toml and target/ dir so the platform crates can rebuild without
# nuking the spike build state we use for benchmarks.

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/wisplab/wisp"

[workspace.dependencies]
wasmtime = "27"
wasmtime-wasi = "27"
anyhow = "1"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
