[package]
name = "wisp-python-wasi-coldstart"
version = "0.0.1"
edition = "2021"
description = "Phase 0 Spike A: WASI Python cold-start with module pooling"
publish = false

[dependencies]
wasmtime = "27"
wasmtime-wasi = "27"
anyhow = "1"

[[bin]]
name = "py-coldstart"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
