[package]
name = "wisp-wasm-coldstart"
version = "0.0.1"
edition = "2021"
description = "Phase 0 Spike 1: Wasmtime cold-start floor measurement"
publish = false

[dependencies]
wasmtime = "27"
wasmtime-wasi = "27"
anyhow = "1"

[[bin]]
name = "coldstart"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
