[package]
name = "wisp-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wisp host runtime daemon: HTTP gateway in front of an in-process WASI Python sandbox pool"

[dependencies]
wasmtime.workspace = true
wasmtime-wasi.workspace = true
anyhow.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
base64 = "0.22"
ureq = { version = "2", features = ["tls", "gzip"] }
url = "2"

[[bin]]
name = "wisp-runtime"
path = "src/main.rs"
